@@ -1,3 +1,8 @@
+2002-07-29  jacob berkman  <jacob@ximian.com>
+
+	* applier.c (set_root_pixmap): 
+	(make_root_pixmap): fixes for building with gdk 2.0
+
 2002-07-27  Mark McLoughlin  <mark@skynet.ie>
 
 	Add support for rendering the wallpaper on
